# pyweek38

./: .gitignore  Pipfile  pyproject.toml
.github/workflows/: python.yml
pyweek38/: __main__.py  game.py  settings.py
