[project]
name = "pyweek38"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = []

[tool.pdm.scripts]
start = "python -m pyweek38"

[tool.ruff]
line-length = 120
lint.pydocstyle.convention = "google"
lint.select = ["ALL"]
lint.ignore = ["D"]

[tool.pyright]
strict = ["**/*.py"]

[tool.pdm]
distribution = false
